--- a/po/linkchecker.de.po
+++ b/po/linkchecker.de.po
@@ -3,81 +3,86 @@
 # LANGUAGE translation of Drupal (general)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  linkchecker.module,v 1.7.4.26 2009/02/03 21:12:13 hass
-#  linkchecker.info,v 1.2.4.2 2009/01/29 00:18:04 hass
+#  linkchecker.admin.inc,v 1.1.2.5 2009/01/28 21:00:26 hass
+#  linkchecker.module,v 1.7.2.12 2009/01/30 20:24:05 hass
+#  linkchecker.info,v 1.2.2.2 2009/01/25 23:41:02 hass
+#  linkchecker.install,v 1.2.2.5 2009/01/29 07:58:01 hass
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
+"Project-Id-Version: German translation of Linkchecker\n"
 "POT-Creation-Date: 2009-02-03 22:23+0100\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2009-02-03 22:25+0100\n"
+"Last-Translator: Alexander Haß\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n!=1)\n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: GERMANY\n"
 
 #: linkchecker.module:25
 msgid "This module provides an aid to finding broken links on your site. It periodically checks contents of all public nodes, tries to find any html links and check for their validity. It reports broken links through the admin interface. For more information about status codes see <a href=\"@rfc\">Status Code Definitions</a>."
 msgstr ""
 
-#: linkchecker.module:39 linkchecker.info:0
+#: linkchecker.module:39
+#: linkchecker.info:0
 msgid "Link checker"
-msgstr ""
+msgstr "Link checker"
 
 #: linkchecker.module:40
 msgid "Link checker configuration."
-msgstr ""
+msgstr "Konfiguration von Link checker."
 
 #: linkchecker.module:47
 msgid "Broken links"
-msgstr ""
+msgstr "Beschädigte Links"
 
 #: linkchecker.module:48
 msgid "Shows a list of broken links in content."
-msgstr ""
+msgstr "Zeigt im Inhalt eine Liste von beschädigten Links an."
 
 #: linkchecker.module:59
 msgid "General settings"
-msgstr ""
+msgstr "Allgemeine Einstellungen"
 
 #: linkchecker.module:64
 msgid "Scan node types for links"
-msgstr ""
+msgstr "Beitragstypen nach Links durchsuchen"
 
 #: linkchecker.module:67
 msgid "Enable link checking for the selected node type(s)."
-msgstr ""
+msgstr "Aktiviert die Linküberprüfung für die ausgewählten Beitragstypen."
 
 #: linkchecker.module:72
 msgid "Scan blocks for links"
-msgstr ""
+msgstr "Blöcke nach Links durchsuchen"
 
 #: linkchecker.module:73
 msgid "Enable this checkbox if links in blocks should be checked."
-msgstr ""
+msgstr "Dieses Kontrollkästchen aktivieren, um Links in Blöcken zu überprüfen."
 
+# Domain -> URLs
 #: linkchecker.module:78
 msgid "Check full qualified domain names only"
-msgstr ""
+msgstr "Nur vollständige Domänennamen überprüfen"
 
 #: linkchecker.module:79
 msgid "Enable this checkbox if only full qualified URLs should be checked. If unchecked, all internal and external URLs will be checked."
-msgstr ""
+msgstr "Dieses Kontrollkästchen aktivieren, wenn nur vollständige URLs überprüft werden sollen. Sobald deaktiviert, werden alle internen und externen URLs überprüft."
 
 #: linkchecker.module:84
 msgid "Pathfilter module support"
-msgstr ""
+msgstr "Pathfilter Modul-Unterstützung"
 
 #: linkchecker.module:85
 msgid "Enable this checkbox for <a href=\"@pathfilter\">pathfilter</a> module support. Pathfilter module need to be installed."
-msgstr ""
+msgstr "Dieses Kontrollkästchen für die <a href=\"@pathfilter\">Pathfilter</a>-Modul-Unterstützung aktivieren. Das Pathfilter-Modul muss installiert werden."
 
 #: linkchecker.module:91
 msgid "Check settings"
-msgstr ""
+msgstr "Überprüfungseinstellungen"
 
 #: linkchecker.module:92
 msgid "For simultaneous link checks it is highly recommended to install the <a href=\"@curl\">cURL</a> library. This may be <strong>necessary</strong> on sites with very many links, but is every time good for link checking performance reasons."
@@ -85,15 +90,15 @@ msgstr ""
 
 #: linkchecker.module:97
 msgid "User-Agent"
-msgstr ""
+msgstr "User-Agent"
 
 #: linkchecker.module:98
 msgid "Defines the user agent that will be used for checking links on remote sites. If someone blocks the standard Drupal user agent you can try with a more common browser."
-msgstr ""
+msgstr "Bestimmt den zur Überprüfung von entfernten Websites zu verwendenden User-Agent. Sollte jemand den standardmäßigen Drupal User-Agent blockieren, kann ein normaler Browser verwendet werden."
 
 #: linkchecker.module:110
 msgid "Check number of links per cron run"
-msgstr ""
+msgstr "Anzahl der zu überprüfenden Links pro Cron-Lauf"
 
 #: linkchecker.module:111
 msgid "Defines the number of links that will be checked per cron run. The possible setting hardly depends on your PHP timeout value and remote servers speed and may increased if <a href=\"@curl\">cURL</a> is installed and use simultaneous request checking. All cron jobs may fail, if this setting is too high!"
@@ -101,23 +106,23 @@ msgstr ""
 
 #: linkchecker.module:117
 msgid "Check interval for links"
-msgstr ""
+msgstr "Überprüfungsinterval für Links"
 
 #: linkchecker.module:118
 msgid "This interval setting defines how often cron will re-check the status of links."
-msgstr ""
+msgstr "Diese Intervalleinstellung legt fest, wie oft Cron den Status von Links überprüft."
 
 #: linkchecker.module:124
 msgid "Cleanup interval for unused links"
-msgstr ""
+msgstr "Bereinigungsinterval für ungenutzt Links"
 
 #: linkchecker.module:125
 msgid "This interval setting defines how often cron will clean up unused links."
-msgstr ""
+msgstr "Diese Intervalleinstellung legt fest, wie oft Cron die ungenutzten Links bereinigt."
 
 #: linkchecker.module:132
 msgid "Error handling"
-msgstr ""
+msgstr "Fehlerbehandlung"
 
 #: linkchecker.module:133
 msgid "Defines error handling and custom actions to be executed if specific HTTP requests are failing."
@@ -125,7 +130,7 @@ msgstr ""
 
 #: linkchecker.module:137
 msgid "Update permanently moved links"
-msgstr ""
+msgstr "Dauerhaft verschobene Links aktualisieren"
 
 #: linkchecker.module:138
 msgid "If enabled, changed links providing a <em>Moved Permanently</em> (status code 301) are automatically updated. If used, it is recommended to use a value of <em>three</em> to make sure this is not only a temporarily change. This feature trust remote sites to provide a valid permanent redirect. Changes will be logged in <a href=\"@dblog\">recent log entries</a>."
@@ -133,31 +138,31 @@ msgstr ""
 
 #: linkchecker.module:142;156
 msgid "Disabled"
-msgstr ""
+msgstr "Deaktiviert"
 
 #: linkchecker.module:143
 msgid "After one failed check"
-msgstr ""
+msgstr "Nach einer fehlgeschlagenen Überprüfung"
 
 #: linkchecker.module:144
 msgid "After two failed checks"
-msgstr ""
+msgstr "Nach zwei fehlgeschlagenen Überprüfungen"
 
 #: linkchecker.module:145
 msgid "After three failed checks"
-msgstr ""
+msgstr "Nach drei fehlgeschlagenen Überprüfungen"
 
 #: linkchecker.module:146
 msgid "After five failed checks"
-msgstr ""
+msgstr "Nach fünf fehlgeschlagenen Überprüfungen"
 
 #: linkchecker.module:147
 msgid "After ten failed checks"
-msgstr ""
+msgstr "Nach zehn fehlgeschlagenen Überprüfungen"
 
 #: linkchecker.module:151
 msgid "Unpublish node on file not found error"
-msgstr ""
+msgstr "Beitragsveröffentlichung bei „Datei wurde nicht gefunden“-Fehler zurückziehen"
 
 #: linkchecker.module:152
 msgid "If enabled, a node with one or more broken links (status code 404) will be unpublished and moved to moderation queue for review after the number of specified fails. If used, it is recommended to use a value of <em>three</em> to make sure this is not only a temporarily error."
@@ -165,35 +170,35 @@ msgstr ""
 
 #: linkchecker.module:157
 msgid "After one file not found error"
-msgstr ""
+msgstr "Nach einem „Datei wurde nicht gefunden“-Fehler"
 
 #: linkchecker.module:158
 msgid "After two file not found errors"
-msgstr ""
+msgstr "Nach zwei „Datei wurde nicht gefunden“-Fehlern"
 
 #: linkchecker.module:159
 msgid "After three file not found errors"
-msgstr ""
+msgstr "Nach drei „Datei wurde nicht gefunden“-Fehlern"
 
 #: linkchecker.module:160
 msgid "After five file not found errors"
-msgstr ""
+msgstr "Nach fünf „Datei wurde nicht gefunden“-Fehlern"
 
 #: linkchecker.module:161
 msgid "After ten file not found errors"
-msgstr ""
+msgstr "Nach zehn „Datei wurde nicht gefunden“-Fehlern"
 
 #: linkchecker.module:167
 msgid "Don't treat these response codes as errors"
-msgstr ""
+msgstr "Diese Antwort-Codes nicht als Fehler behandeln"
 
 #: linkchecker.module:168
 msgid "One HTTP status code per line, e.g. 403."
-msgstr ""
+msgstr "Ein HTTP-Status-Code pro Zeile, z.b. 403."
 
 #: linkchecker.module:174
 msgid "Clear link data"
-msgstr ""
+msgstr "Linkdaten leeren"
 
 #: linkchecker.module:175
 msgid "This action clears all link checker tables and/or and analyzes all node types, blocks and cck fields. Normally there is no need to press one of this buttons. Use this only for immediate cleanup tasks and to force a full re-check of all links."
@@ -201,15 +206,15 @@ msgstr ""
 
 #: linkchecker.module:181;205
 msgid "Analyze content for links"
-msgstr ""
+msgstr "Inhalt nach Links durchsuchen"
 
 #: linkchecker.module:185;213
 msgid "Clear link data and analyze content for links"
-msgstr ""
+msgstr "Linkdaten leeren und Inhalt nach Links durchsuchen"
 
 #: linkchecker.module:196
 msgid "Invalid response code %code found."
-msgstr ""
+msgstr "Ungültiger Antwort-Code %code wurde gefunden."
 
 #: linkchecker.module:209;239
 msgid "Content analysis has been queued for processing via cron."
@@ -221,79 +226,79 @@ msgstr ""
 
 #: linkchecker.module:325
 msgid "URL"
-msgstr ""
+msgstr "URL"
 
 #: linkchecker.module:326
 msgid "Response"
-msgstr ""
+msgstr "Antwort"
 
 #: linkchecker.module:327
 msgid "Error"
-msgstr ""
+msgstr "Fehler"
 
 #: linkchecker.module:328
 msgid "Operations"
-msgstr ""
+msgstr "Operationen"
 
 #: linkchecker.module:342
 msgid "Edit node @node"
-msgstr ""
+msgstr "Beitrag @node bearbeiten"
 
 #: linkchecker.module:348
 msgid "Edit block @block"
-msgstr ""
+msgstr "Block @node bearbeiten"
 
 #: linkchecker.module:361
 msgid "No broken links have been found."
-msgstr ""
+msgstr "Es wurden keine beschädigten Links gefunden."
 
 #: linkchecker.module:460
 msgid "Changed permanently moved link in %node from %src to %dst."
-msgstr ""
+msgstr "Dauerhaft verschobener Link in Beitrag %node wurde von %src auf %dst geändert."
 
 #: linkchecker.module:487
 msgid "Changed permanently moved link in box %bid from %src to %dst."
-msgstr ""
+msgstr "Dauerhaft verschobener Link in Box %bid wurde von %src auf %dst geändert."
 
 #: linkchecker.module:492
 msgid "Link %link has changed and needs to be updated."
-msgstr ""
+msgstr "Link %link wurde geändert und muss aktualisiert werden."
 
 #: linkchecker.module:498
 msgid "Broken link %link has been found."
-msgstr ""
+msgstr "Ein beschädigter Link %link wurde gefunden."
 
 #: linkchecker.module:516
 msgid "Method HEAD is not allowed for link %link. Method has been changed to GET."
-msgstr ""
+msgstr "Die Methode HEAD ist für den Link %link nicht zulässig. Die Methode wurde auf GET geändert."
 
 #: linkchecker.module:741
 msgid "Wiped out obsolete links."
-msgstr ""
+msgstr "Veraltete Links wurden beseitigt."
 
 #: linkchecker.module:845
 msgid "Set @type %title to unpublished."
-msgstr ""
+msgstr "Die Veröffentlichung von @type %title wurde zurückgezogen."
 
 #: linkchecker.module:460;487;492;498;516;741;845;0
 msgid "linkchecker"
-msgstr ""
+msgstr "linkchecker"
 
 #: linkchecker.module:555
 msgid "Link check of <a href=\"@url\">@url</a> failed once (status code: @code)."
 msgid_plural "Link check of <a href=\"@url\">@url</a> failed @count times (status code: @code)."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Die Linküberprüfung von <a href=\"@url\">@url</a> ist einmal fehlgeschlagen (Status-Code: @code)."
+msgstr[1] "Die Linküberprüfung von <a href=\"@url\">@url</a> ist @count mal fehlgeschlagen (Status-Code: @code)."
 
 #: linkchecker.module:15
 msgid "access linkchecker"
-msgstr ""
+msgstr "Zugriff auf Linkchecker"
 
 #: linkchecker.module:15
 msgid "administer linkchecker"
-msgstr ""
+msgstr "Linkchecker verwalten"
 
 #: linkchecker.info:0
 msgid "Periodically checks for broken links in node types, blocks and cck fields and reports the results."
-msgstr ""
+msgstr "Überprüft regelmäßig auf beschädigte Links in Beitragstypen, Blöcken und CCK-Feldern und Berichtet die Ergebnisse."
 
