--- a/po/linkchecker.de.po
+++ b/po/linkchecker.de.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: German translation of Linkchecker\n"
 "POT-Creation-Date: 2009-03-26 00:22+0100\n"
-"PO-Revision-Date: 2009-03-26 00:25+0100\n"
+"PO-Revision-Date: 2009-06-28 16:36+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -282,7 +282,7 @@ msgstr "Kommentar @comment bearbeiten"
 
 #: linkchecker.module:466
 msgid "Edit block @block"
-msgstr "Block @node bearbeiten"
+msgstr "Block @block bearbeiten"
 
 #: linkchecker.module:479
 msgid "No broken links have been found."
