--- a/translations/linkchecker.de.po
+++ b/translations/linkchecker.de.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: German translation of Linkchecker\n"
 "POT-Creation-Date: 2009-07-13 23:54+0200\n"
-"PO-Revision-Date: 2009-07-13 23:57+0100\n"
+"PO-Revision-Date: 2009-07-18 14:57+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -481,7 +481,7 @@ msgstr "Der Link <a href=\"@url\">@url</a> wurde zuletzt am @last_checked überp
 
 #: includes/linkchecker.admin.inc:405
 msgid "Select request method"
-msgstr "Anfragethode auswählen"
+msgstr "Anfragemethode auswählen"
 
 #: includes/linkchecker.admin.inc:408
 msgid "HEAD"
