--- a/po/linkchecker.de.po
+++ b/po/linkchecker.de.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: German translation of Linkchecker\n"
 "POT-Creation-Date: 2009-07-14 00:21+0200\n"
-"PO-Revision-Date: 2009-07-14 00:24+0100\n"
+"PO-Revision-Date: 2009-07-18 14:58+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -360,7 +360,7 @@ msgstr "Der Link <a href=\"@url\">@url</a> wurde zuletzt am @last_checked überp
 
 #: linkchecker.module:447
 msgid "Select request method"
-msgstr "Anfragethode auswählen"
+msgstr "Anfragemethode auswählen"
 
 #: linkchecker.module:450
 msgid "HEAD"
