--- a/translations/linkchecker.de.po
+++ b/translations/linkchecker.de.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: German translation of Linkchecker\n"
 "POT-Creation-Date: 2009-07-26 23:11+0200\n"
-"PO-Revision-Date: 2009-07-26 23:12+0100\n"
+"PO-Revision-Date: 2009-07-26 23:39+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -207,7 +207,7 @@ msgstr "Links in <code>&lt;audio&gt;</code>-Tags extrahieren"
 # content -> page content
 #: includes/linkchecker.admin.inc:63
 msgid "Enable this checkbox if links in audio tags should be extracted. The audio element is used to embed sound content."
-msgstr "Dieses Kontrollkästchen aktivieren, um Audo-Tags zu extrahieren. Das Audio-Element wird verwendet, um Musik in den Seiteninhalt einzubetten."
+msgstr "Dieses Kontrollkästchen aktivieren, um Audio-Tags zu extrahieren. Das Audio-Element wird verwendet, um Musik in den Seiteninhalt einzubetten."
 
 #: includes/linkchecker.admin.inc:68
 msgid "Extract links in <code>&lt;embed&gt;</code> tags"
