--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@
 linkchecker 6.x-dev, nightly
 -----------------------------
 
+* #632732 by sleepcamel, hass: Add a message to $node->log when saving a new revision
 * #627774 by charmer: Linkchecker Czech Translation
 * Replace word "node" in text with "content" for easier translation
 * #580248: Prevent link check failure if 'max_execution_time' = 0 (unlimited).
