--- a/translations/linkchecker.de.po
+++ b/translations/linkchecker.de.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: German translation of Linkchecker\n"
-"POT-Creation-Date: 2009-11-15 18:34+0100\n"
-"PO-Revision-Date: 2009-11-15 19:23+0100\n"
-"Last-Translator: Alexander Haß\n"
+"POT-Creation-Date: 2009-11-22 15:16+0100\n"
+"PO-Revision-Date: 2009-11-22 15:17+0100\n"
+"Last-Translator: Alexander Haß <http://drupal.org/user/85918>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -192,7 +192,7 @@ msgid "Extract links in <code>&lt;a&gt;</code> and <code>&lt;area&gt;</code> tag
 msgstr "Links in <code>&lt;a&gt;</code> und <code>&lt;area&gt;</code>-Tags extrahieren"
 
 #: includes/linkchecker.admin.inc:57
-msgid "Enable this checkbox if normal hyperlinks should be extracted. The anchor element defines a hyperlink, the named target destination for a hyperlink, or both. The area elememt defines a hot-spot region on an image, and associates it with a hypertext link."
+msgid "Enable this checkbox if normal hyperlinks should be extracted. The anchor element defines a hyperlink, the named target destination for a hyperlink, or both. The area element defines a hot-spot region on an image, and associates it with a hypertext link."
 msgstr "Dieses Kontrollkästchen aktivieren, um normale Hyperlinks zu extrahieren. Das Anker-Element definiert einen Hyperlink, das benannte Ziel für einen Hyperlink oder beides. Das Area-Element legt eine Hotspot-Region auf einem Bild fest und verbindet diese mit einem Hypertext-Link."
 
 #: includes/linkchecker.admin.inc:62
@@ -430,7 +430,6 @@ msgid "Scanning for links in blocks have failed with an error."
 msgstr "Scannen nach Links in Blöcken ist mit einem Fehler fehlgeschlagen."
 
 #: includes/linkchecker.batch.inc:166;215;263
-#, fuzzy
 msgid "Remaining @remaining of @total scans."
 msgstr "@remaining von @total Scans verbleiben."
 
@@ -567,7 +566,7 @@ msgid "The link %url will be checked again on the next cron run."
 msgstr "Der Link %url wird beim nächsten Cron-Lauf noch einmal überprüpft."
 
 #: includes/linkchecker.pages.inc:244
-msgid "The link settings for %url have been saved and the fail counter has been resetted."
+msgid "The link settings for %url have been saved and the fail counter has been reset."
 msgstr "Die Linkeinstellungen für %url wurden gespeichert und der Fehlerzähler wurde zurückgesetzt."
 
 #: includes/linkchecker.pages.inc:249
