--- a/po/linkchecker.pot
+++ b/po/linkchecker.pot
@@ -3,7 +3,7 @@
 # LANGUAGE translation of Drupal (general)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  linkchecker.module,v 1.7.4.147 2009/11/15 17:19:46 hass
+#  linkchecker.module,v 1.7.4.149 2009/11/22 14:13:29 hass
 #  linkchecker.info,v 1.2.4.2 2009/01/29 00:18:04 hass
 #  linkchecker.install,v 1.2.4.30 2009/08/18 20:16:19 hass
 #
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2009-11-15 19:07+0100\n"
+"POT-Creation-Date: 2009-11-22 15:19+0100\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
@@ -101,7 +101,7 @@ msgid "Extract links in <code>&lt;a&gt;</code> and <code>&lt;area&gt;</code> tag
 msgstr ""
 
 #: linkchecker.module:163
-msgid "Enable this checkbox if normal hyperlinks should be extracted. The anchor element defines a hyperlink, the named target destination for a hyperlink, or both. The area elememt defines a hot-spot region on an image, and associates it with a hypertext link."
+msgid "Enable this checkbox if normal hyperlinks should be extracted. The anchor element defines a hyperlink, the named target destination for a hyperlink, or both. The area element defines a hot-spot region on an image, and associates it with a hypertext link."
 msgstr ""
 
 #: linkchecker.module:168
@@ -405,7 +405,7 @@ msgid "The link %url will be checked again on the next cron run."
 msgstr ""
 
 #: linkchecker.module:547
-msgid "The link settings for %url have been saved and the fail counter has been resetted."
+msgid "The link settings for %url have been saved and the fail counter has been reset."
 msgstr ""
 
 #: linkchecker.module:552
