Back to nightly

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+linkchecker 6.x-dev, nightly
+----------------------------
+
 
 linkchecker 6.x-2.5, February 15, 2012
 --------------------------------------
