--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* #1586022: linkchecker generating bad User-Agent string
+* Status code 500 on HEAD/GET does not increase fail_count
+* #1488572: i18n: "Permission restrictions deny" all broken links in other languages
 
 linkchecker 6.x-2.5, February 15, 2012
 --------------------------------------
