--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* Added Drupal 6.14 warning to known issues.
 * #1804842: Lots of warnings when comment module is not installed
 * #1811908: Allow extracting protocol relative url's
 * #1586022: linkchecker generating bad User-Agent string
