--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* #1804842 follow up: Exit if all node types are disabled
 * #1450672: Cron task does not impersonate to admin user on automatic content updates.
 * Added Drupal 6.14 warning to known issues.
 * #1804842: Lots of warnings when comment module is not installed
