--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* linkchecker_update_6211 was missing an update message.
 * #1869924: Strict warning: Creating default object from empty value.
 * #1867460: Prevent save on automatic updates, if content has not changed.
 * #1804842 follow up: Exit if all node types are disabled
