--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* Fixed some typos.
 * Upgraded outdated HTTP user agents.
 * #380052: Add support with non-blocking parallel link checking.
 * linkchecker_update_6211 was missing an update message.
