--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+linkchecker 6.x-dev, nightly
+----------------------------
+
+
 linkchecker 6.x-2.6, December 24, 2012
 --------------------------------------
 
