--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* #1875602: Check URL fragment identifiers in content
 * Minor code style fixes
 
 linkchecker 6.x-2.6, December 24, 2012
