--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,10 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+
+linkchecker 6.x-2.7, February 14, 2012
+--------------------------------------
+
 * Issue #1901018 by hass: ERROR - __clone method called on non-object.
 * #1891900: Uninstall of variable 'linkchecker_check_connections_max' failed.
 * #1719174: Editing node throws "Undefined property" stdClass::$nid in hook_node_prepare().
