--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 linkchecker 6.x-dev, nightly
 ----------------------------
 
+* Issue #2125719 by hass: Links in unpublished nodes are still checked
 * Added Smileys filter (http://drupal.org/project/smiley) to filter blacklist
 * Issue #1306498 by hass, evolvingweb: Remove unnecessary hook_requirements in linkchecker.install 
 * Issue #1923328 by larowlan: Fragment check fails when source page contains spaces between attribute name, equals and value.
