--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
-linkchecker 6.x-dev, nightly
-----------------------------
+linkchecker 6.x-2.8, June 7, 2014
+---------------------------------
 
 * Issue #2280827: Notice: Undefined index: content-type in _linkchecker_status_handling()
 * Issue #2125719 by hass: Links in unpublished nodes are still checked
