--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+linkchecker 6.x-dev, nightly
+----------------------------
+
+* Issue #2664260 by hass: num_rows only exists in mysqli
+* Fixed two typos
+* Issue #2303177: "Back to Top" Page anchor being reported as a 404 error
+
 linkchecker 6.x-2.8, June 7, 2014
 ---------------------------------
 
